<resources>
    <string name="app_name">Wheelify</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_settings">Settings</string>
    <string name="title_headline">Headlines</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="description_app">Wheelify adalah aplikasi untuk memindai kendaraan di jalan tol.</string>
    <string name="dummy_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="get_started">Get Started</string>
    <string name="get_done">Mari Kita Selesaikan</string>
    <string name="about_app">Wheelify adalah aplikasi untuk memindai kendaraan di jalan tol.</string>
    <string name="team_heading">Tim Pengembang:</string>
    <string name="team_members">\n
        Tsabitah Elysia Krismananda\n
        Dwi Rahayu Wulanida\n
        Masitha Mirzaky Firdaus\n
        Iluh Meiranda Dyah Setyawati\n
        M. Saaduddin Abdillah Yusuf\n
        Jonathan Kaparang\n
        Afan Kristianto
    </string>
    <string name="recommendation">Ini Untukmu !</string>
    <string name="popular">Rekomendasi Populer</string>
    <string name="source_news">Source News</string>
    <string name="about">Tentang</string>
    <string name="date_app">Aplikasi dibuat</string>
    <string name="date">12/12/2024</string>
    <string name="result">Hasil Analisis</string>
</resources>